syntax = "proto3";
package nano;

message AmountRequest {
  string amount = 1;
}

message AmountResponse {
  string amount = 1;
}
