syntax = "proto3";
package nano;

message EmptyRequest {
}

message DeterministicKeyRequest {
  string seed = 1;
  int32 index = 2;
}

message KeyRequest {
  string key = 1;
}

message KeyResponse {
  string private = 1;
  string public = 2;
  string account = 3;
}

message KeepaliveRequest {
  string address = 1;
  int32 port = 2;
}
